Bottom Nav with Icons and Routing

--- a/Front/src/Components/Home/home.css
+++ b/Front/src/Components/Home/home.css
@@ -1,9 +1,9 @@
 
 .Fondo{
-    background-image:url(./FondoG.png);
+    background-image:url(../../imagenes/FondoG.png);
     background-size: cover;
     height: 531px;
-    margin-top: 85px;
+    margin-top: 76px;
 }
 #Quote {
     position: absolute;
