--- a/Front/src/Components/NavTabBottom/NavBottom.css
+++ b/Front/src/Components/NavTabBottom/NavBottom.css
@@ -66,7 +66,13 @@
     
     color:  #323F4B; 
 }
-/* #HomeText:hover{
-    color: #0CCA4A; 
-} */
 
+
+
+#Profileimg{
+    position: absolute;
+    top: -100px;
+    height: 531px;
+    margin-top: 76px;
+    background-size: cover;
+}
