--- a/Front/src/Components/Signup/Signup.css
+++ b/Front/src/Components/Signup/Signup.css
@@ -120,6 +120,25 @@ input{
 
     color:  #F7FFF7;
 }
+#BtnGoogle2{
+    position: absolute;
+    width: 200px;
+    height: 32px;
+    left: calc(50% - 200px/2 - 0.5px);
+    top: 555px;
+    background: #eead98;
+    border: none;
+    
+    border-radius: 50px;
+    box-shadow: 4px 5px 7px -7px #000000;
+    margin-top: 10px;
+    text-align: center;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+    box-shadow: 4px 5px 7px -7px #000000;
+
+    color:  #F7FFF7;
+}
 #textGoogle{
     display: flex;
     flex-direction: row;
