--- a/Front/src/Components/Profile/profile.css
+++ b/Front/src/Components/Profile/profile.css
@@ -3,7 +3,7 @@
     position: absolute;
     top:0px;
     left:0px;
-    background-image:url(../../imagenes/perfil.png);
+    background-image:url(../../imagenes/FondoPerfil.png);
     background-size: cover;
     height: 607px;
     width: 375px;
