--- a/Front/src/Components/Profile/profile.css
+++ b/Front/src/Components/Profile/profile.css
@@ -5,7 +5,60 @@
     left:0px;
     background-image:url(../../imagenes/FondoPerfil.png);
     background-size: cover;
-    height: 607px;
+    height: 588px;
     width: 375px;
     margin-top: 0px;
+}
+#DataUserP{
+    font-family: Noto Sans KR;
+    font-style: normal;
+    font-weight: 300;
+    font-size: 16px;
+    line-height: 175%;
+    text-align: right;
+    color: #7B8794;
+    margin-right: 60px;
+    margin-top: 120px;
+}
+
+.edit{
+    position:relative;
+    display:flex;
+    flex-direction: column;
+    left:155px;
+    top:-156px;  
+}
+.edit2{
+    margin-top: 26px;
+}
+
+#FotoPerfil{
+    position:relative;
+    left: calc(50% - 151px/2);
+    top: 50px;
+    height: 151px;
+    border-radius: 50%;
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+}
+
+#Logout{
+        position: relative;
+        width: 200px;
+        height: 32px;
+        left: calc(50% - 200px/2 - 0.5px);
+        top:-100px;
+        background:#2D6A4F;
+        border: none;
+        box-sizing: border-box;
+        border-radius: 50px;
+        box-shadow: 4px 5px 7px -7px #000000;
+        
+        
+        text-align: center;
+        letter-spacing: 1.25px;
+        text-transform: uppercase;
+        color: #F7FFF7;
+}
+#LogoutP{
+    color:red
 }
