--- a/Front/src/Components/Signup/PopupLogin.css
+++ b/Front/src/Components/Signup/PopupLogin.css
@@ -1,12 +1,12 @@
 
 .backgroundModal {
     position: absolute;
-    
+    top:-612px;
   }
   .backgroundModal::before {
     content: "";
     position: absolute;
-    top: 0; 
+    
     left: 0;
     width: 100%; height: 100%;
     background-image: url(../../imagenes/Background.PNG);
