--- a/Front/src/Components/LogIn/login.css
+++ b/Front/src/Components/LogIn/login.css
@@ -53,7 +53,7 @@ input.login{
 
 }
 h3{
-    font-family: Noto Sans KR;
+    font-family: 'Noto Sans', sans-serif;
     font-style: normal;
     color: #2D6A4F;
 }
