--- a/Front/src/Components/NavTabBottom/NavBottom.css
+++ b/Front/src/Components/NavTabBottom/NavBottom.css
@@ -1,14 +1,15 @@
 .Bottom{
+    position: relative;
     display: flex;
     flex-direction: row;
     align-items: center;
-    
-    padding: 0px;
+
 
     width: 375px;
     height: 60px;
     left: 0%;
     right: 0%;
+    top: 0px;
     
     background: #FFFFFF;
     border-top: 0.5px solid #7B8794;
