--- a/Front/src/Components/Profile/profile.css
+++ b/Front/src/Components/Profile/profile.css
@@ -1,16 +1,16 @@
 #Perfil{
 
     position: absolute;
-    top:0px;
-    left:0px;
+    top:-612px;
     background-image:url(../../imagenes/FondoPerfil.png);
     background-size: cover;
-    height: 588px;
+    height: 611px;
     width: 375px;
-    margin-top: 0px;
+    overflow: hidden;
+    
 }
 #DataUserP{
-    font-family: Noto Sans KR;
+    font-family: 'Noto Sans', sans-serif;
     font-style: normal;
     font-weight: 300;
     font-size: 16px;
