--- a/Front/src/index.css
+++ b/Front/src/index.css
@@ -1,6 +1,6 @@
 body {
   margin: 0;
-  font-family: 'Noto Sans KR', sans-serif;
+  font-family: 'Noto Sans R', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color:#FFFFFF;
