--- a/Front/src/Components/ProductDetail/ProductDetail.css
+++ b/Front/src/Components/ProductDetail/ProductDetail.css
@@ -6,14 +6,15 @@
     height: 611px;
     width: 375px;
     overflow: hidden;
+  
 }
 
 #hoja{
     position: relative;
     width: 140px;
     height: 140px;
-    left: 152px;
-    top: 20px;
+    left: 165px;
+    top: -35px;
 
 }
 #head{
@@ -35,3 +36,147 @@
     left:300px;
     top:10px;
 }
+
+#circle{
+    position:relative;
+    left:97px;
+    top:-130px;
+    background: white;
+    width: 180px;
+    height: 190px;
+    border-radius: 40%;
+    margin-bottom: -8px;
+    filter: drop-shadow(0px 1px 2px rgba(0, 0, 0, 0.2));
+   
+}
+#productimg{
+    position:relative;
+    left:152px;
+    bottom: 290px;
+    height:150px;
+   
+    
+}
+#infoContainer{
+    position: relative;
+    width: 328px;
+    height: 365px;
+    left: 25px;
+    top: -260px;
+    background: #FFFFFF;
+    border-radius: 20px;
+    overflow-y:scroll;
+}
+
+#main{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-left: 25px;
+    width: 280px;
+}
+#brand2{
+    font-family: 'Noto Sans', sans-serif;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 18px;
+    line-height: 26px;
+    margin-top:18px;
+
+    letter-spacing: -0.3px;
+
+    color: #2D6A4F;
+
+}
+#name{
+    font-family: 'Noto Sans', sans-serif;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 14px;
+    line-height: 20px;
+    letter-spacing: -0.3px;
+    margin-top: -5px;
+    color: #333333;
+}
+#price{
+    font-family: 'Noto Sans', sans-serif;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 12px;
+    line-height: 114%;
+    letter-spacing: 0.2px;
+    margin-top: -5px;
+    color: #A8A8A8;
+}
+#description{
+    font-family: 'Noto Sans', sans-serif;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 20px;
+    text-align:center;
+    letter-spacing: -0.3px;
+    margin-top: -5px;
+    color: #000000;
+
+}
+.my-anchor-css-class
+{
+    text-decoration:none;
+    color: #87D9AE;
+}
+
+.desplegable1{
+    font-family: 'Noto Sans', sans-serif;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 15px;
+    line-height: 20px;
+    margin-left: 15px;
+    letter-spacing: 0.5px;
+
+    color: #333333;
+}
+.desplegable2{
+    font-family: 'Noto Sans', sans-serif;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 15px;
+    line-height: 20px;
+    margin-left: 15px;
+    letter-spacing: 0.5px;
+    margin-top:1px;
+    color: #333333;
+}
+#line{
+    margin-left:13px;
+    margin-bottom: 12px;;
+}
+#ingredients{
+    font-family: 'Noto Sans', sans-serif;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 20px;
+    letter-spacing: -0.3px;
+    margin-left: 25px;
+    margin-right: 15px;
+    margin-top:-5px;
+    color: #333333;
+}
+#ingredients2{
+    font-family: 'Noto Sans', sans-serif;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 20px;
+    letter-spacing: -0.3px;
+    margin-left: 25px;
+    margin-right: 15px;
+    margin-top:-5px;
+    color: #87D9AE;
+}
+
+
+
