--- a/Front/src/Components/SearchBar/Productlist.css
+++ b/Front/src/Components/SearchBar/Productlist.css
@@ -91,6 +91,7 @@
     max-width: 340px;
     height:1.2px;
     left:4px;
+    margin-bottom: 7px;
      
 }
 
@@ -104,4 +105,89 @@
 .classes.heading{
     background-color: aqua;
 
+}
+
+#Nofavs{
+    position:relative;
+    top:0px;
+    height: 611px;
+    width: 375px;
+    margin-bottom: -4px;
+    overflow: hidden;
+}
+#FondoFavs{
+    top:-611px;
+    background-image:url(../../imagenes/fondoSimple.png);
+    background-size: cover;
+    height: 611px;
+    width: 375px;
+    overflow: hidden;
+}
+#ContenedorFavs{
+    position:relative;
+    margin-top: 300px;
+    
+
+}
+#ContainerBtnFavs{
+    position:relative;
+    top:80px;
+    width: 375px;
+    height: 70px;
+    background: rgba(255, 255, 255, 0.35);
+    backdrop-filter: blur(4px);
+    margin-bottom: -59px;
+  
+}
+#BtnFav{
+  
+    width: 110px;
+    height: 32px;
+    margin-left: 70px;
+    margin-top: 17px;
+    
+    
+    
+    background:#87D9AE;
+    border: none;
+    box-sizing: border-box;
+    border-radius: 50px;
+    box-shadow: 4px 5px 7px -7px #000000;
+    
+    text-align: center;
+    letter-spacing: 1.25px;
+    text-transform: uppercase;
+    color: #F7FFF7;
+}
+
+#BtnList{
+    width: 110px;
+    height: 32px;
+    left: calc(50% - 200px/2 - 0.5px);
+    top: 415px;
+    margin-left: 10px;
+    /* background: #007CBA; */
+    background:#F9F7F8;
+    border: none;
+    box-sizing: border-box;
+    border-radius: 50px;
+    box-shadow: 4px 5px 7px -7px #000000;
+    
+    text-align: center;
+    letter-spacing: 1.25px;
+    text-transform: uppercase;
+
+    
+}
+
+#DeleteFav{
+    width: 22px;
+    height: 22px;
+    transform: rotate(45deg);
+    position: relative;
+    z-index: 1;
+    
+    opacity:70%;
+    left:300px;
+    top:0px;
 }
