--- a/Front/src/Components/Signup/PopupLogin.css
+++ b/Front/src/Components/Signup/PopupLogin.css
@@ -1,11 +1,11 @@
 
 .backgroundModal {
-    position: absolute;
+  
     top:-612px;
   }
   .backgroundModal::before {
     content: "";
-    position: absolute;
+    position: fixed;
     
     left: 0;
     width: 100%; height: 100%;
@@ -16,7 +16,7 @@
   }
   .backgroundModal-inside {
     /* This will make it stack on top of the ::before */
-    position: absolute;
+    position: fixed;
     
   }
 
