--- a/Front/src/Components/ProductDetail/ProductDetail.css
+++ b/Front/src/Components/ProductDetail/ProductDetail.css
@@ -31,11 +31,15 @@
     left: 30px;
     top:10px;
 }
-#fav{
+.fav2{
     position:relative;
     left:300px;
     top:10px;
 }
+
+
+    
+    
 
 #circle2{
     position:relative;
@@ -47,16 +51,14 @@
     border-radius: 40%;
     margin-bottom: -8px;
     filter: drop-shadow(0px 1px 2px rgba(0, 0, 0, 0.2));
-   
 }
 #productimg{
     position:relative;
     left:152px;
     bottom: 290px;
-    height:150px;
-   
-    
+    height:150px; 
 }
+
 #infoContainer{
     position: relative;
     width: 328px;
