--- a/Front/src/Components/SearchBar/SearchBar.css
+++ b/Front/src/Components/SearchBar/SearchBar.css
@@ -1,7 +1,7 @@
 
 #search{
     position: relative;
-    left: 30px;
+    left: -2px;
     top: 15px;
     
     width: 272px;
@@ -43,7 +43,8 @@
     position:relative;
     left:310px;
     top:22px;
-    z-index: 2;
+    z-index: 1;
+    opacity: 60%;
     
 }
 
