--- a/Front/src/App.css
+++ b/Front/src/App.css
@@ -1,21 +1,71 @@
 
-.App {
+
+/* ///////MAPA////// */
+
+.leaflet-container {
+  width: 100vw;
+  height: 611px;
+}
+.leaflet-pane>img{
+  content:url('../../Front/src/imagenes/iconTiendas.svg');
+
+}
+.leaflet-pane>img:first-child{
+  content:url('../../Front/src/imagenes/currentposition.svg');
+}
+.leaflet-control-attribution {
+  opacity:0%
+}
+
+#BtnShop{
+  width: 150px;
+  height: 21px;
+  padding-bottom: 5px;
+  padding-top:5px;
+  padding-left:10px;
+  padding-right:10px;
+  top: 190px;
+
+  background: #2E79DE;
+
+
+  border: 0.5px solid #323F4B;
+  box-sizing: border-box;
+  border-radius: 50px;
+  box-shadow: 4px 5px 7px -7px #000000;
+  
   text-align: center;
+  letter-spacing: 1.25px;
+  text-transform: uppercase;
+
+  color: #F7FFF7;
+}
+.leaflet-popup-content-wrapper{
+  padding: 1px;
+  text-align: center;
+  border-radius: 12px;
+}
+.popup-text>p{
+  margin-top:-5px;
+}
+.leaflet-pane.leaflet-shadow-pane{
+  display:none
+}
+#Shop{
+  
+  height: 570px;
+  
+}
+#iconClose2{
+  width: 26px;
+  height: 26px;
+  color:invert;
+  filter:invert(100%);
+
+  transform: rotate(45deg);
+  position: relative;
+  left:330px;
+  top:-560px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
+/*  */
