--- a/Front/src/index.css
+++ b/Front/src/index.css
@@ -10,3 +10,23 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+#BtnShop{
+  width: 10vw;
+  height: 21px;
+
+  top: 190px;
+
+  background: #2E79DE;
+
+
+  border: 0.5px solid #323F4B;
+  box-sizing: border-box;
+  /* border-radius: 50px; */
+  box-shadow: 4px 5px 7px -7px #000000;
+  
+  text-align: center;
+  letter-spacing: 1.25px;
+  text-transform: uppercase;
+
+  color: #F7FFF7;
+}
